[gd_scene load_steps=33 format=3 uid="uid://dygmdff7w6ism"]

[ext_resource type="Script" path="res://Gacha/GachaPage.gd" id="1_g35st"]
[ext_resource type="PackedScene" uid="uid://dkk4ce7nk7mdd" path="res://BG.tscn" id="2_sdeuc"]
[ext_resource type="Texture2D" uid="uid://b1phog1uordx6" path="res://png/Gacha/big_WarCorrespondent.png" id="3_6ybra"]
[ext_resource type="Texture2D" uid="uid://dhcfisoiwimpc" path="res://png/player.png" id="4_vq0qa"]
[ext_resource type="FontFile" uid="uid://c8kfctqkt4qdk" path="res://png/font/大部分的字體/04B_30__.TTF" id="5_v8qjs"]
[ext_resource type="Texture2D" uid="uid://dat1rk2bpv8ps" path="res://png/Gacha/單抽.png" id="6_xtjt2"]
[ext_resource type="Script" path="res://Gacha/Once.gd" id="7_ybu4d"]
[ext_resource type="Texture2D" uid="uid://dyqd2ar66u28n" path="res://png/Gacha/十連.png" id="8_nxed2"]
[ext_resource type="Script" path="res://Gacha/TenTimes.gd" id="9_rq2b5"]
[ext_resource type="Texture2D" uid="uid://dsl3ecoy1s3pn" path="res://png/MainScene/錢跟鑽.png" id="10_gbjpb"]
[ext_resource type="FontFile" uid="uid://s44dpneaad4g" path="res://png/font/id字體.ttf" id="11_amvy1"]

[sub_resource type="SystemFont" id="SystemFont_lsitt"]
font_names = PackedStringArray("Constantia")

[sub_resource type="AtlasTexture" id="AtlasTexture_rhohn"]
atlas = ExtResource("4_vq0qa")
region = Rect2(0, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxktb"]
atlas = ExtResource("4_vq0qa")
region = Rect2(33, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r5lr6"]
atlas = ExtResource("4_vq0qa")
region = Rect2(66, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qdse0"]
atlas = ExtResource("4_vq0qa")
region = Rect2(99, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rlmyi"]
atlas = ExtResource("4_vq0qa")
region = Rect2(132, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbwww"]
atlas = ExtResource("4_vq0qa")
region = Rect2(165, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_72wwt"]
atlas = ExtResource("4_vq0qa")
region = Rect2(0, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xmjgo"]
atlas = ExtResource("4_vq0qa")
region = Rect2(33, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6tfd3"]
atlas = ExtResource("4_vq0qa")
region = Rect2(66, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_g28e0"]
atlas = ExtResource("4_vq0qa")
region = Rect2(99, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_718vq"]
atlas = ExtResource("4_vq0qa")
region = Rect2(132, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lyjbx"]
atlas = ExtResource("4_vq0qa")
region = Rect2(165, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_886kf"]
atlas = ExtResource("4_vq0qa")
region = Rect2(0, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4api3"]
atlas = ExtResource("4_vq0qa")
region = Rect2(33, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qaps3"]
atlas = ExtResource("4_vq0qa")
region = Rect2(66, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i5yao"]
atlas = ExtResource("4_vq0qa")
region = Rect2(99, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_67tle"]
atlas = ExtResource("4_vq0qa")
region = Rect2(132, 32, 33, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i21c0"]
atlas = ExtResource("4_vq0qa")
region = Rect2(165, 32, 33, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_msgko"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rhohn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxktb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r5lr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qdse0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rlmyi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbwww")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72wwt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xmjgo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6tfd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g28e0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_718vq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyjbx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_886kf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4api3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qaps3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5yao")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_67tle")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i21c0")
}],
"loop": false,
"name": &"transition",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_akrvt"]

[node name="GachaPage" type="Node2D"]
script = ExtResource("1_g35st")

[node name="BG" parent="." instance=ExtResource("2_sdeuc")]

[node name="CardSample" type="Node2D" parent="."]

[node name="Card" type="Sprite2D" parent="CardSample"]
position = Vector2(758, 244)
scale = Vector2(1.3, 1.3)
texture = ExtResource("3_6ybra")

[node name="Timer" type="Timer" parent="CardSample"]
wait_time = 2.0
autostart = true

[node name="Possibility" type="Label" parent="."]
offset_left = 925.0
offset_top = 150.0
offset_right = 1025.0
offset_bottom = 190.0
theme_override_colors/font_color = Color(0.45098, 0.388235, 0.341176, 1)
theme_override_fonts/font = SubResource("SystemFont_lsitt")
theme_override_font_sizes/font_size = 25
horizontal_alignment = 1

[node name="Cards" type="Node2D" parent="."]

[node name="Transition" type="AnimatedSprite2D" parent="."]
position = Vector2(582, 330)
scale = Vector2(4.5, 3.707)
sprite_frames = SubResource("SpriteFrames_msgko")
animation = &"transition"
autoplay = "transition"

[node name="Continue" type="MarginContainer" parent="."]
offset_left = 1024.0
offset_top = 34.0
offset_right = 1144.0
offset_bottom = 84.0

[node name="ContinueLabel" type="Label" parent="Continue"]
layout_mode = 2
theme_override_colors/font_color = Color(0.45098, 0.388235, 0.341176, 1)
theme_override_fonts/font = ExtResource("5_v8qjs")
theme_override_font_sizes/font_size = 18
text = "Continue
"

[node name="Continue" type="TouchScreenButton" parent="Continue"]
position = Vector2(57, 24)
scale = Vector2(6, 4)
shape = SubResource("RectangleShape2D_akrvt")

[node name="Once" type="MarginContainer" parent="."]
offset_left = 568.0
offset_top = 435.0
offset_right = 668.0
offset_bottom = 485.0

[node name="Sprite2D" type="Sprite2D" parent="Once"]
position = Vector2(40, 25)
scale = Vector2(1.2, 1.2)
texture = ExtResource("6_xtjt2")

[node name="Once" type="TouchScreenButton" parent="Once"]
position = Vector2(40, 25)
scale = Vector2(12, 3.5)
shape = SubResource("RectangleShape2D_akrvt")
script = ExtResource("7_ybu4d")

[node name="TenTimes" type="MarginContainer" parent="."]
offset_left = 861.0
offset_top = 435.0
offset_right = 966.0
offset_bottom = 485.0

[node name="Sprite2D" type="Sprite2D" parent="TenTimes"]
position = Vector2(50, 25)
scale = Vector2(1.2, 1.2)
texture = ExtResource("8_nxed2")

[node name="TenTimes" type="TouchScreenButton" parent="TenTimes"]
position = Vector2(50, 25)
scale = Vector2(12, 3.5)
shape = SubResource("RectangleShape2D_akrvt")
script = ExtResource("9_rq2b5")

[node name="CoinAndDiamond" type="Node2D" parent="."]
position = Vector2(1024, 34)

[node name="CoinAmount" type="Label" parent="CoinAndDiamond"]
offset_left = -339.0
offset_top = 1.0
offset_right = -179.0
offset_bottom = 41.0
theme_override_colors/font_color = Color(0.45098, 0.388235, 0.341176, 1)
theme_override_fonts/font = ExtResource("5_v8qjs")
theme_override_font_sizes/font_size = 30
text = "1000"
horizontal_alignment = 2
vertical_alignment = 1

[node name="GemAmount" type="Label" parent="CoinAndDiamond"]
offset_left = -84.0
offset_top = 1.0
offset_right = 16.0
offset_bottom = 41.0
theme_override_colors/font_color = Color(0.45098, 0.388235, 0.341176, 1)
theme_override_fonts/font = ExtResource("5_v8qjs")
theme_override_font_sizes/font_size = 30
text = "100"
horizontal_alignment = 2
vertical_alignment = 1

[node name="CoinAndGem" type="TouchScreenButton" parent="CoinAndDiamond"]
position = Vector2(-388, -10)
scale = Vector2(1.3, 1.3)
texture_normal = ExtResource("10_gbjpb")

[node name="NameAndID" type="Node2D" parent="."]

[node name="Name" type="Label" parent="NameAndID"]
offset_left = 58.0
offset_top = 38.0
offset_right = 308.0
offset_bottom = 73.0
theme_override_colors/font_color = Color(0.45098, 0.388235, 0.341176, 1)
theme_override_fonts/font = ExtResource("5_v8qjs")
theme_override_font_sizes/font_size = 30
text = "Player"

[node name="PlayerID" type="Label" parent="NameAndID"]
offset_left = 62.0
offset_top = 82.0
offset_right = 362.0
offset_bottom = 112.0
theme_override_colors/font_color = Color(0.45098, 0.388235, 0.341176, 1)
theme_override_fonts/font = ExtResource("11_amvy1")
theme_override_font_sizes/font_size = 25
text = "ID: "

[node name="Back" type="MarginContainer" parent="."]
offset_left = 44.0
offset_top = 453.0
offset_right = 147.0
offset_bottom = 503.0

[node name="BackLabel" type="Label" parent="Back"]
layout_mode = 2
theme_override_colors/font_color = Color(0.45098, 0.388235, 0.341176, 1)
theme_override_fonts/font = ExtResource("5_v8qjs")
theme_override_font_sizes/font_size = 30
text = "Back"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Back" type="TouchScreenButton" parent="Back"]
position = Vector2(49, 24)
scale = Vector2(6, 4)
shape = SubResource("RectangleShape2D_akrvt")

[node name="List" type="Node2D" parent="."]

[node name="First" type="Sprite2D" parent="List"]
position = Vector2(205, 195)
scale = Vector2(1.25, 1.25)

[node name="Second" type="Sprite2D" parent="List"]
position = Vector2(205, 340)
scale = Vector2(1.25, 1.25)

[connection signal="timeout" from="CardSample/Timer" to="." method="_on_timer_timeout"]
[connection signal="animation_finished" from="Transition" to="Once/Once" method="_on_transition_animation_finished"]
[connection signal="animation_finished" from="Transition" to="TenTimes/TenTimes" method="_on_transition_animation_finished"]
[connection signal="pressed" from="Continue/Continue" to="Once/Once" method="_on_continue_pressed"]
[connection signal="pressed" from="Continue/Continue" to="TenTimes/TenTimes" method="_on_continue_pressed"]
[connection signal="pressed" from="Once/Once" to="Once/Once" method="_on_pressed"]
[connection signal="pressed" from="TenTimes/TenTimes" to="TenTimes/TenTimes" method="_on_pressed"]
[connection signal="pressed" from="CoinAndDiamond/CoinAndGem" to="." method="_on_coin_and_gem_pressed"]
[connection signal="pressed" from="Back/Back" to="." method="_on_back_pressed"]
